cncf-test-1/q24/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-backend
  namespace: default
  labels: {}
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: secret
  egress:
  - to:
      - podSelector:
          matchLabels:
            app: db1
    ports:
    - protocol: TCP
      port: 1111
  - to:
      - podSelector:
          matchLabels:
            app: db1
    ports:
    - protocol: TCP
      port: 2222
